fix(core.shared): :poop: better align=end on dialogComponent

--- a/src/app/shared/components/dialog/dialog.component.scss
+++ b/src/app/shared/components/dialog/dialog.component.scss
@@ -9,7 +9,6 @@
 
     mat-toolbar{ display: flex; }
     mat-icon{ font-size: 4rem; width: auto; height: auto; margin-bottom: .5rem; }
-    mat-dialog-actions{ justify-content: flex-end; }
     [mat-button]{ text-transform: uppercase; }
 
 }
